<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/selectImageDoc"
        android:title="@string/selectImage"
        android:orderInCategory="40"
        android:icon="@drawable/select_image"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/selectPdf"
        android:title="@string/pdfSelect"
        android:orderInCategory="20"
        android:icon="@drawable/pdf_60"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/saveCarDoc"
        android:title="@string/save"
        android:orderInCategory="40"
        android:icon="@drawable/records"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/shareDocument"
        android:title="@string/shareDocument"
        android:orderInCategory="40"
        android:icon="@drawable/share_doc"
        app:showAsAction="always"
        />
</menu>